--- a/source/Monastry.ActiveRecord.Testing/Monastry.ActiveRecord.Testing.csproj
+++ b/source/Monastry.ActiveRecord.Testing/Monastry.ActiveRecord.Testing.csproj
@@ -40,13 +40,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SolutionVersion.cs">
+      <Link>SolutionVersion.cs</Link>
+    </Compile>
     <Compile Include="InMemoryTest.cs" />
     <Compile Include="InMemoryConnectionProvider.cs" />
     <Compile Include="NUnitInMemoryTest.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
