--- a/source/Monastry.ActiveRecord/Monastry.ActiveRecord.csproj
+++ b/source/Monastry.ActiveRecord/Monastry.ActiveRecord.csproj
@@ -40,16 +40,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SolutionVersion.cs">
+      <Link>SolutionVersion.cs</Link>
+    </Compile>
     <Compile Include="ConversationCanceledEventArgs.cs" />
     <Compile Include="ConversationContext.cs" />
     <Compile Include="IConversation.cs" />
     <Compile Include="IConversationContext.cs" />
     <Compile Include="IScope.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="BasicConversationManagement.cd" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
