--- a/source/NHibernateAssumptions.Tests/NHibernateAssumptions.Tests.csproj
+++ b/source/NHibernateAssumptions.Tests/NHibernateAssumptions.Tests.csproj
@@ -43,8 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SolutionVersion.cs">
+      <Link>SolutionVersion.cs</Link>
+    </Compile>
     <Compile Include="SessionAssumptions.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -54,6 +56,9 @@
       <Project>{D7124A27-7BAC-4085-B6DA-374694607164}</Project>
       <Name>Monastry.ActiveRecord.Testing</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
