Changed values for Git

--- a/settings/UppercuT.config
+++ b/settings/UppercuT.config
@@ -6,7 +6,7 @@
   <!-- Required Items -->
   <property name="project.name" value="Monastry.ActiveRecord" overwrite="false" />
   <property name="path_to_solution" value="./source/" overwrite="false" />
-  <property name="repository.path" value="https://monastry-activerecord.googlecode.com/hg/" overwrite="false" />
+  <property name="repository.path" value="https://mzywitza@github.com/mzywitza/Monastry.ActiveRecord.git" overwrite="false" />
   <property name="company.name" value="Monastry" overwrite="false" />
 
   <!-- folders -->
@@ -31,7 +31,7 @@
   <!-- test.framework: none, mbunit2, nunit, gallio - with gallio it must be installed in program files on every computer. Alternatively you can add 26MB to your repo and put it there. Little much for my tastes. -->
   <property name="test.framework" value="nunit" overwrite="false" />
   <!-- source_control_type: svn, vss, tfs, vault, git, hg -->
-  <property name="source_control_type" value="hg" overwrite="false" />
+  <property name="source_control_type" value="git" overwrite="false" />
   
   <!-- Environment spesific variables -->
   <property name="path.separator" value="${string::trim(path::combine(' ', ' '))}" />
