--- a/source/packages/repositories.config
+++ b/source/packages/repositories.config
@@ -4,4 +4,5 @@
   <repository path="..\Monastry.ActiveRecord.NHibernate\packages.config" />
   <repository path="..\Monastry.ActiveRecord.Testing\packages.config" />
   <repository path="..\Monastry.ActiveRecord.Tests\packages.config" />
+  <repository path="..\WindsorAssumptions.Tests\packages.config" />
 </repositories>
