More Windsor assumptions added

--- a/source/WindsorAssumptions.Tests/WindsorAssumptions.Tests.csproj
+++ b/source/WindsorAssumptions.Tests/WindsorAssumptions.Tests.csproj
@@ -67,6 +67,7 @@
     <Compile Include="..\SolutionVersion.cs">
       <Link>SolutionVersion.cs</Link>
     </Compile>
+    <Compile Include="GenericServiceAssumptions.cs" />
     <Compile Include="WindsorAssumptions.cs" />
   </ItemGroup>
   <ItemGroup>
