--- a/source/Monastry.ActiveRecord.Tests/packages.config
+++ b/source/Monastry.ActiveRecord.Tests/packages.config
@@ -5,4 +5,6 @@
   <package id="System.Data.SQLite" version="1.0.66.1" />
   <package id="Iesi.Collections" version="3.2.0.3001" />
   <package id="NHibernate" version="3.2.0.3001" />
+  <package id="Castle.Core" version="2.5.2" />
+  <package id="Castle.Windsor" version="2.5.3" />
 </packages>
