--- a/source/Monastry.ActiveRecord/Monastry.ActiveRecord.csproj
+++ b/source/Monastry.ActiveRecord/Monastry.ActiveRecord.csproj
@@ -31,6 +31,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.Core">
+      <HintPath>..\packages\Castle.Core.2.5.2\lib\NET35\Castle.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Castle.Windsor">
+      <HintPath>..\packages\Castle.Windsor.2.5.3\lib\NET40\Castle.Windsor.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -43,8 +49,10 @@
     <Compile Include="..\SolutionVersion.cs">
       <Link>SolutionVersion.cs</Link>
     </Compile>
+    <Compile Include="AR.cs" />
     <Compile Include="ConversationCanceledEventArgs.cs" />
     <Compile Include="ConversationContext.cs" />
+    <Compile Include="IActiveRecordInstaller.cs" />
     <Compile Include="IConversation.cs" />
     <Compile Include="IConversationContext.cs" />
     <Compile Include="IDao.cs" />
@@ -53,6 +61,7 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="BasicConversationManagement.cd" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
