--- a/source/packages/repositories.config
+++ b/source/packages/repositories.config
@@ -5,4 +5,5 @@
   <repository path="..\Monastry.ActiveRecord.Tests\packages.config" />
   <repository path="..\WindsorAssumptions.Tests\packages.config" />
   <repository path="..\Monastry.ActiveRecord.NHibernate\packages.config" />
+  <repository path="..\Monastry.ActiveRecord\packages.config" />
 </repositories>
