--- a/source/Monastry.ActiveRecord.NHibernate/Monastry.ActiveRecord.NHibernate.csproj
+++ b/source/Monastry.ActiveRecord.NHibernate/Monastry.ActiveRecord.NHibernate.csproj
@@ -31,6 +31,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.Core, Version=2.5.1.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\packages\Castle.Core.2.5.2\lib\NET35\Castle.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Castle.Windsor, Version=2.5.1.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\packages\Castle.Windsor.2.5.3\lib\NET40\Castle.Windsor.dll</HintPath>
+    </Reference>
     <Reference Include="Iesi.Collections, Version=1.0.1.0, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
       <HintPath>..\packages\Iesi.Collections.3.2.0.3001\lib\Net35\Iesi.Collections.dll</HintPath>
     </Reference>
@@ -55,6 +61,7 @@
     <Compile Include="INhConversationContext.cs" />
     <Compile Include="INhDao.cs" />
     <Compile Include="INhScope.cs" />
+    <Compile Include="NhActiveRecordInstallerBase.cs" />
     <Compile Include="NhConversation.cs" />
     <Compile Include="NhConversationContext.cs" />
     <Compile Include="NhDao.cs" />
