--- a/source/Monastry.ActiveRecord.NHibernate/packages.config
+++ b/source/Monastry.ActiveRecord.NHibernate/packages.config
@@ -2,4 +2,6 @@
 <packages>
   <package id="Iesi.Collections" version="3.2.0.3001" />
   <package id="NHibernate" version="3.2.0.3001" />
+  <package id="Castle.Core" version="2.5.2" />
+  <package id="Castle.Windsor" version="2.5.3" />
 </packages>
