Query-support added.

--- a/source/Monastry.ActiveRecord.NHibernate/Monastry.ActiveRecord.NHibernate.csproj
+++ b/source/Monastry.ActiveRecord.NHibernate/Monastry.ActiveRecord.NHibernate.csproj
@@ -64,11 +64,13 @@
     <Compile Include="INhConversation.cs" />
     <Compile Include="INhConversationContext.cs" />
     <Compile Include="INhDao.cs" />
+    <Compile Include="INhQuery.cs" />
     <Compile Include="INhScope.cs" />
     <Compile Include="NhActiveRecordInstallerBase.cs" />
     <Compile Include="NhConversation.cs" />
     <Compile Include="NhConversationContext.cs" />
     <Compile Include="NhDao.cs" />
+    <Compile Include="NhQueryBase.cs" />
     <Compile Include="NhScope.cs" />
   </ItemGroup>
   <ItemGroup>
