Added custom usage support for AR.Install()

--- a/source/Monastry.ActiveRecord/Monastry.ActiveRecord.csproj
+++ b/source/Monastry.ActiveRecord/Monastry.ActiveRecord.csproj
@@ -63,6 +63,7 @@
     <Compile Include="IDao.cs" />
     <Compile Include="IQuery.cs" />
     <Compile Include="IScope.cs" />
+    <Compile Include="Usage.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
