--- a/source/Monastry.ActiveRecord.Tests/Monastry.ActiveRecord.Tests.csproj
+++ b/source/Monastry.ActiveRecord.Tests/Monastry.ActiveRecord.Tests.csproj
@@ -81,6 +81,8 @@
     <Compile Include="..\SolutionVersion.cs">
       <Link>SolutionVersion.cs</Link>
     </Compile>
+    <Compile Include="InMemoryInstallerFunctionalTests.cs" />
+    <Compile Include="InMemoryInstallerTests.cs" />
     <Compile Include="QueryInstallationTests.cs" />
     <Compile Include="ConversationMgmtTests.cs" />
     <Compile Include="InstallationTests.cs" />
@@ -98,6 +100,10 @@
     <ProjectReference Include="..\Monastry.ActiveRecord.NHibernate\Monastry.ActiveRecord.NHibernate.csproj">
       <Project>{1353C8FB-99A3-4D05-A08A-D4C7FE5A7313}</Project>
       <Name>Monastry.ActiveRecord.NHibernate</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Monastry.ActiveRecord.Testing.NHibernate\Monastry.ActiveRecord.Testing.NHibernate.csproj">
+      <Project>{65198157-8843-4C78-8046-08077AEE737A}</Project>
+      <Name>Monastry.ActiveRecord.Testing.NHibernate</Name>
     </ProjectReference>
     <ProjectReference Include="..\Monastry.ActiveRecord.Testing\Monastry.ActiveRecord.Testing.csproj">
       <Project>{D7124A27-7BAC-4085-B6DA-374694607164}</Project>
