--- a/source/packages/repositories.config
+++ b/source/packages/repositories.config
@@ -6,4 +6,5 @@
   <repository path="..\WindsorAssumptions.Tests\packages.config" />
   <repository path="..\Monastry.ActiveRecord.NHibernate\packages.config" />
   <repository path="..\Monastry.ActiveRecord\packages.config" />
+  <repository path="..\Monastry.ActiveRecord.Testing.NHibernate\packages.config" />
 </repositories>
