--- a/source/Monastry.ActiveRecord/Monastry.ActiveRecord.csproj
+++ b/source/Monastry.ActiveRecord/Monastry.ActiveRecord.csproj
@@ -56,8 +56,10 @@
     <Compile Include="AR.cs" />
     <Compile Include="ConversationCanceledEventArgs.cs" />
     <Compile Include="ConversationContext.cs" />
+    <Compile Include="Extensions\EntityExtensions.cs" />
     <Compile Include="Extensions\InstallerExtensions.cs" />
     <Compile Include="IActiveRecordInstaller.cs" />
+    <Compile Include="IActiveRecordObject.cs" />
     <Compile Include="IConversation.cs" />
     <Compile Include="IConversationContext.cs" />
     <Compile Include="IDao.cs" />
