--- a/source/Monastry.ActiveRecord.Tests/Monastry.ActiveRecord.Tests.csproj
+++ b/source/Monastry.ActiveRecord.Tests/Monastry.ActiveRecord.Tests.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Dummies.cs" />
     <Compile Include="InMemoryInstallerFunctionalTests.cs" />
     <Compile Include="InMemoryInstallerTests.cs" />
+    <Compile Include="MockInstallerTests.cs" />
     <Compile Include="QueryInstallationTests.cs" />
     <Compile Include="ConversationMgmtTests.cs" />
     <Compile Include="InstallationTests.cs" />
@@ -102,6 +103,10 @@
     <ProjectReference Include="..\Monastry.ActiveRecord.NHibernate\Monastry.ActiveRecord.NHibernate.csproj">
       <Project>{1353C8FB-99A3-4D05-A08A-D4C7FE5A7313}</Project>
       <Name>Monastry.ActiveRecord.NHibernate</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Monastry.ActiveRecord.Testing.Mocks\Monastry.ActiveRecord.Testing.Mocks.csproj">
+      <Project>{AF6A641A-EEF9-44CD-BD00-D735DABA89BC}</Project>
+      <Name>Monastry.ActiveRecord.Testing.Mocks</Name>
     </ProjectReference>
     <ProjectReference Include="..\Monastry.ActiveRecord.Testing.NHibernate\Monastry.ActiveRecord.Testing.NHibernate.csproj">
       <Project>{65198157-8843-4C78-8046-08077AEE737A}</Project>
