--- a/source/packages/repositories.config
+++ b/source/packages/repositories.config
@@ -7,4 +7,5 @@
   <repository path="..\Monastry.ActiveRecord.NHibernate\packages.config" />
   <repository path="..\Monastry.ActiveRecord\packages.config" />
   <repository path="..\Monastry.ActiveRecord.Testing.NHibernate\packages.config" />
+  <repository path="..\Monastry.ActiveRecord.Testing.Mocks\packages.config" />
 </repositories>
