--- a/source/Monastry.ActiveRecord.Tests/Monastry.ActiveRecord.Tests.csproj
+++ b/source/Monastry.ActiveRecord.Tests/Monastry.ActiveRecord.Tests.csproj
@@ -88,7 +88,7 @@
     <Compile Include="Dummies.cs" />
     <Compile Include="InMemoryInstallerFunctionalTests.cs" />
     <Compile Include="InMemoryInstallerTests.cs" />
-    <Compile Include="MockInstallerTests.cs" />
+    <Compile Include="Mocks\MockInstallerTests.cs" />
     <Compile Include="Model\Software.cs" />
     <Compile Include="QueryInstallationTests.cs" />
     <Compile Include="ConversationMgmtTests.cs" />
@@ -111,10 +111,6 @@
       <Project>{1353C8FB-99A3-4D05-A08A-D4C7FE5A7313}</Project>
       <Name>Monastry.ActiveRecord.NHibernate</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Monastry.ActiveRecord.Testing.Mocks\Monastry.ActiveRecord.Testing.Mocks.csproj">
-      <Project>{AF6A641A-EEF9-44CD-BD00-D735DABA89BC}</Project>
-      <Name>Monastry.ActiveRecord.Testing.Mocks</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Monastry.ActiveRecord.Testing.NHibernate\Monastry.ActiveRecord.Testing.NHibernate.csproj">
       <Project>{65198157-8843-4C78-8046-08077AEE737A}</Project>
       <Name>Monastry.ActiveRecord.Testing.NHibernate</Name>
@@ -125,7 +121,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
