--- a/source/Monastry.ActiveRecord.Tests/Monastry.ActiveRecord.Tests.csproj
+++ b/source/Monastry.ActiveRecord.Tests/Monastry.ActiveRecord.Tests.csproj
@@ -81,27 +81,29 @@
     <Compile Include="..\SolutionVersion.cs">
       <Link>SolutionVersion.cs</Link>
     </Compile>
-    <Compile Include="ArApiTests.cs" />
+    <Compile Include="Core\ArApiTests.cs" />
     <Compile Include="Assumptions\WindsorGenericServiceAssumptions.cs" />
     <Compile Include="Assumptions\NhAssumptions.cs" />
     <Compile Include="Assumptions\WindsorAssumptions.cs" />
-    <Compile Include="Dummies.cs" />
-    <Compile Include="InMemoryInstallerFunctionalTests.cs" />
-    <Compile Include="InMemoryInstallerTests.cs" />
-    <Compile Include="Mocks\MockInstallerTests.cs" />
+    <Compile Include="Model\AssignedSoftware.cs" />
+    <Compile Include="Model\Dummies.cs" />
+    <Compile Include="Model\Installation.cs" />
+    <Compile Include="TestSupport\InMemoryInstallerFunctionalTests.cs" />
+    <Compile Include="TestSupport\InMemoryInstallerTests.cs" />
+    <Compile Include="TestSupport\MockInstallerTests.cs" />
     <Compile Include="Model\Software.cs" />
-    <Compile Include="QueryInstallationTests.cs" />
-    <Compile Include="ConversationMgmtTests.cs" />
-    <Compile Include="InstallationTests.cs" />
-    <Compile Include="MockQuery.cs" />
-    <Compile Include="NhActiveRecordInstallerBaseTests.cs" />
-    <Compile Include="NhDaoFunctionalTests.cs" />
-    <Compile Include="NhConversationMgmtTests.cs" />
-    <Compile Include="NhConversationTests.cs" />
-    <Compile Include="NhConversionFunctionalTests.cs" />
-    <Compile Include="NhDaoTests.cs" />
-    <Compile Include="NhQueryBaseTests.cs" />
-    <Compile Include="ScopeMgmtTests.cs" />
+    <Compile Include="Core\QueryInstallationTests.cs" />
+    <Compile Include="Core\ConversationMgmtTests.cs" />
+    <Compile Include="Core\InstallationTests.cs" />
+    <Compile Include="Model\MockQuery.cs" />
+    <Compile Include="NHibernate\NhActiveRecordInstallerBaseTests.cs" />
+    <Compile Include="NHibernate\NhDaoFunctionalTests.cs" />
+    <Compile Include="NHibernate\NhConversationMgmtTests.cs" />
+    <Compile Include="NHibernate\NhConversationTests.cs" />
+    <Compile Include="NHibernate\NhConversionFunctionalTests.cs" />
+    <Compile Include="NHibernate\NhDaoTests.cs" />
+    <Compile Include="NHibernate\NhQueryBaseTests.cs" />
+    <Compile Include="Core\ScopeMgmtTests.cs" />
     <Compile Include="Tools\InMemoryConnectionProvider.cs" />
     <Compile Include="Tools\InMemoryTest.cs" />
     <Compile Include="Tools\NUnitInMemoryTest.cs" />
