Updated nuspec because of changes in UppercuT.

--- a/nuget/Monastry.ActiveRecord.nuspec
+++ b/nuget/Monastry.ActiveRecord.nuspec
@@ -16,6 +16,6 @@
     </dependencies>
   </metadata>
 	<files>
-		<file src="..\Monastry.ActiveRecord\Monastry.*" target="lib" />
+		<file src="lib\Monastry.*" target="lib" />
 	</files> 
 </package>
